# nano-darkmsg

./: README.md
.github/workflows/: python-ci.yml  rust-ci.yml
android/: README.md  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/zerocool/nanodarkmsg/: CryptoManager.kt  MainActivity.kt
core/: Cargo.toml
core/src/: key_exchange.rs  lib.rs
docs/: CONTRIBUTING.md  SMTP_SETUP.md
ios/: README.md  SETUP_GUIDE.md  project.yml  setup_check.sh
ios/NanoDarkMsg/: ContentView.swift  CryptoManager.swift  Data+Hex.swift  Info.plist  NanoDarkMsgApp.swift  QRCodeScannerView.swift
ios/NanoDarkMsg.xcodeproj/: project.pbxproj
scripts/: comfyui_workflow.json  gen_image.sh  nano_smtp.py  post_to_channel.sh  proto_encrypt.py  steganography.py
