[package]
name = "nano-crypto-core"
version = "0.1.0"
edition = "2021"
authors = ["NANO <nano@zerocool.local>"]
description = "Cryptographic core for NANO Dark Messenger"
license = "MIT"

[dependencies]
# Cryptography
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
x25519-dalek = "2.0"
ed25519-dalek = "2.0"
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"

# Encoding
base64 = "0.21"
hex = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
strip = true
